# edgetz

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: corpus-format.md
examples/: README.md  export_fixtures.py  test_safe_localize.py
scripts/: smoke.sh
src/edgetz/: __init__.py  __main__.py  cli.py  corpus.py  emit.py  errors.py  model.py  query.py  verify.py
tests/: conftest.py  test_calendar_facts.py  test_cli.py  test_corpus_integrity.py  test_emit.py  test_model.py  test_query.py  test_readme_example.py  test_verify.py
