[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgetz"
version = "0.1.0"
description = "Emits the nastiest real datetimes — DST jumps, leap days, week 53 — as ready-made test fixtures."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ" }]
keywords = ["timezone", "dst", "fixtures", "testing", "datetime", "edge-cases", "tzdata", "leap-second"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
edgetz = "edgetz.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/edgetz"
Repository = "https://github.com/JaydenCJ/edgetz"
Issues = "https://github.com/JaydenCJ/edgetz/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]
addopts = "-q"
